@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <ExternalPlugin version="1">
- <Name>synce-opensync-plugin</Name>
+ <Name>synce-sync</Name>
  <LongName>Plugin to synchronize with Windows Mobile 5/6 devices</LongName>
  <Description>Developed by Dr J A Gow 2007 for Opensync version >= 0.30</Description>
 
